crates/parser/src/snapshots/parser__tests__parse_inline_ok@0089_conclude_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "conclude A\n (!claim A)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0089_conclude_ded.ath
---
CONCLUDE_DED
  CONCLUDE_KW "conclude"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "A"
  WHITESPACE "\n "
  DED_PHRASE
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "A"
      R_PAREN ")"
  WHITESPACE "\n"

