crates/parser/src/snapshots/parser__tests__parse_inline_ok@0090_load_dir.ath.snap
---
source: crates/parser/src/tests.rs
description: "load \"list.ath\"\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0090_load_dir.ath
---
LOAD_DIR
  LOAD_KW "load"
  WHITESPACE " "
  STRING "\"list.ath\""
  WHITESPACE "\n"

