crates/parser/src/snapshots/parser__tests__parse_inline_ok@0093_assert_closed_named.ath.snap
---
source: crates/parser/src/tests.rs
description: "assert* foo := (bar = bar)\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0093_assert_closed_named.ath
---
ASSERT_CLOSED_DIR
  ASSERT_STAR_KW "assert*"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  APPLICATION_EXPR
    L_PAREN "("
    IDENT_EXPR
      IDENTIFIER
        IDENT "bar"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "="
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "bar"
    R_PAREN ")"
  WHITESPACE "\n"

