crates/parser/src/snapshots/parser__tests__parse_inline_ok@0095_assert_named.ath.snap
---
source: crates/parser/src/tests.rs
description: "assert foo := (bar = bar)\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0095_assert_named.ath
---
INFIX_ASSERT_DIR
  ASSERT_KW "assert"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  APPLICATION_EXPR
    L_PAREN "("
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "bar"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "="
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "bar"
    R_PAREN ")"
  WHITESPACE "\n"

