crates/parser/src/snapshots/parser__tests__parse_inline_ok@0097_declare_no_args.ath.snap
---
source: crates/parser/src/tests.rs
description: "declare foo : Int\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0097_declare_no_args.ath
---
DECLARE_DIR
  DECLARE_KW "declare"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
    WHITESPACE " "
  COLON ":"
  WHITESPACE " "
  IDENT_SORT
    IDENTIFIER
      IDENT "Int"
      WHITESPACE "\n"

