crates/parser/src/snapshots/parser__tests__parse_inline_ok@0099_declare_attrs.ath.snap
---
source: crates/parser/src/tests.rs
description: "declare foo : [Int] -> Int [left-assoc]\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0099_declare_attrs.ath
---
DECLARE_DIR
  DECLARE_KW "declare"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
    WHITESPACE " "
  COLON ":"
  WHITESPACE " "
  FUNC_SORTS
    L_BRACK "["
    IDENT_SORT
      IDENTIFIER
        IDENT "Int"
    R_BRACK "]"
    WHITESPACE " "
  THIN_ARROW "->"
  WHITESPACE " "
  IDENT_SORT
    IDENTIFIER
      IDENT "Int"
      WHITESPACE " "
  DECLARE_ATTRS
    L_BRACK "["
    DECLARE_ATTR
      LEFT_ASSOC_KW "left-assoc"
    R_BRACK "]"
    WHITESPACE "\n"

